# rust-basics

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .grype.yaml  .hadolint.yaml  .npmrc  .semgrepignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile  lefthook.yml  mise.toml  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: appsec.yml  ci.yml  docker.yml
benchmarks/: README.md  k6-ping.js  k6-tasks.js  run-k6-tasks.sh  run-k6.sh
crates/consumer/: Cargo.toml  Dockerfile  justfile
crates/consumer/src/: config.rs  lib.rs  main.rs
crates/consumer/tests/: worker.rs
crates/heartbeat/: Cargo.toml  Dockerfile  justfile
crates/heartbeat/src/: config.rs  lib.rs  main.rs  worker.rs
crates/heartbeat/tests/: worker.rs
crates/httpx/: Cargo.toml  justfile
crates/httpx/src/: config.rs  health.rs  lib.rs  logging.rs  metrics.rs  problem.rs  server.rs
crates/httpx/tests/: config_yaml.rs  problem.rs  server.rs
crates/kafka/: Cargo.toml  justfile
crates/kafka/src/: config.rs  lib.rs
crates/kafka/tests/: broker.rs
crates/otelx/: Cargo.toml  justfile
crates/otelx/src/: config.rs  lib.rs
crates/otelx/tests/: init.rs
crates/ping/: Cargo.toml  Dockerfile  justfile
crates/ping/src/: lib.rs  main.rs
crates/ping/tests/: api.rs
crates/ratelimit/: Cargo.toml  README.md  justfile
crates/ratelimit/src/: lib.rs
crates/ratelimit/tests/: limiter.rs
crates/resilient-client/: Cargo.toml  README.md  justfile
crates/resilient-client/src/: backoff.rs  circuit_breaker.rs  client.rs  config.rs  error.rs  lib.rs  metrics.rs
crates/resilient-client/tests/: integration.rs
crates/secrets/: Cargo.toml  README.md  justfile
crates/secrets/src/: cache.rs  lib.rs
crates/tasks/: Cargo.toml  Dockerfile  justfile
crates/tasks/src/: config.rs  domain.rs  lib.rs  main.rs  store.rs
crates/tasks/tests/: api.rs
crates/valkey/: Cargo.toml  justfile
crates/valkey/src/: config.rs  lib.rs
crates/valkey/tests/: cache.rs
docker/: deps.yml  stack.yml
e2e/: .oxlintrc.json  .prettierignore  README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: services.ts
e2e/helpers/: env.ts
e2e/tests/: health.spec.ts  heartbeat.spec.ts  ping.spec.ts  tasks.spec.ts
scripts/: host-services-spawn.sh
