[workspace]
members = [
    "crates/httpx",
    "crates/ping",
    "crates/heartbeat",
    "crates/resilient-client",
    "crates/ratelimit",
    "crates/secrets",
    "crates/valkey",
    "crates/kafka",
    "crates/otelx",
    "crates/tasks",
    "crates/consumer",
]
resolver = "2"

# ── Shared package metadata ────────────────────────────────────────────────────
[workspace.package]
edition      = "2021"
rust-version = "1.85"
publish      = false

# ── Shared build profiles ─────────────────────────────────────────────────────
[profile.release]
lto           = "thin"   # thin LTO: safe for local dev + CI (low RAM)
codegen-units = 1
opt-level     = 3
panic         = "abort"
strip         = true

# Production Docker profile — full DWARF kept in Cargo; the Dockerfile splits +
# strips. Modelled on tracehub-edge's `dist` profile.
[profile.dist]
inherits        = "release"
lto             = "thin"
codegen-units   = 16
debug           = 2
strip           = "none"

# ── Shared dependencies ────────────────────────────────────────────────────────
# Rule (inherited from tracehub-edge): a dep goes here when it appears in ≥2
# member crates at the same version. Crates reference these with
# `{ workspace = true [, features = [...]] }`.
[workspace.dependencies]
# Internal
httpx            = { path = "crates/httpx" }
resilient-client = { path = "crates/resilient-client" }
ratelimit        = { path = "crates/ratelimit" }
secrets          = { path = "crates/secrets" }
valkey           = { path = "crates/valkey" }
kafka            = { path = "crates/kafka" }
otelx            = { path = "crates/otelx" }

# Data services — Valkey cache, Kafka broker (reliable, maintained drivers).
# `redis` (redis-rs) speaks RESP to a Valkey server; `rdkafka` wraps librdkafka
# (vendored + statically built, so the binary stays self-contained on cc-debian12).
redis   = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# libz-static links zlib into the binary so it runs on distroless/cc (which ships
# glibc + libgcc but not libz.so.1). ssl/sasl stay off — PLAINTEXT only.
rdkafka = { version = "0.37", features = ["tokio", "libz-static"] }
futures = "0.3"
uuid    = { version = "1", features = ["v4"] }

# Distributed tracing (OpenTelemetry). The versions across the otel ecosystem are
# tightly coupled — bump them together.
opentelemetry                   = "0.27"
opentelemetry_sdk               = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp              = { version = "0.27", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry           = "0.28"

# Runtime
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP / Web
axum       = { version = "0.8", features = ["http1", "json", "macros", "tokio", "tracing", "matched-path"] }
tower      = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
# Outbound HTTP client (resilient-client) — versions/features as tracehub-edge's
# resilient-http-client: rustls (no OpenSSL), transparent decompression, json.
reqwest    = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "deflate", "stream"] }

# Resilience / rate limiting
governor = { version = "0.7", features = ["dashmap"] }
dashmap  = "6"
rand     = "0.10"

# Crypto (secrets) — pure-Rust RustCrypto, no OpenSSL
aes-gcm  = "0.10"
secrecy  = "0.10"
base64   = "0.22"
arc-swap = "1"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
prometheus         = "0.14"
once_cell          = "1"

# Serialization
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml_ng = "0.10"
bytes         = "1"

# Config
envy = "0.4"

# Error handling
anyhow    = "1"
thiserror = "2"

# Dev/test
tempfile = "3"
testcontainers         = "0.25"
testcontainers-modules = { version = "0.13", features = ["kafka"] }
