[package]
name        = "consumer"
version     = "0.1.0"
description = "Kafka consumer worker draining tasks.events (rust-basics)"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[[bin]]
name = "consumer"
path = "src/main.rs"

[dependencies]
httpx.workspace      = true
kafka.workspace      = true
otelx.workspace      = true
tokio.workspace      = true
prometheus.workspace = true
serde.workspace      = true
serde_json.workspace = true
envy.workspace       = true
anyhow.workspace     = true
tracing.workspace    = true

[dev-dependencies]
tokio.workspace                  = true
prometheus.workspace             = true
serde_json.workspace             = true
testcontainers.workspace         = true
testcontainers-modules.workspace = true
