[package]
name        = "ping"
version     = "0.1.0"
description = "Minimal ping/pong HTTP service (rust-basics)"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[[bin]]
name = "ping"
path = "src/main.rs"

[dependencies]
httpx.workspace      = true
tokio.workspace      = true
axum.workspace       = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true

[dev-dependencies]
tower.workspace = true
