[package]
name        = "ratelimit"
version     = "0.1.0"
description = "Keyed GCRA rate limiter built on governor (lock-free)"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[dependencies]
governor.workspace  = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
