[package]
name        = "secrets"
version     = "0.1.0"
description = "AES-256-GCM seal/open, auto-redacting Secret<T>, and a lock-free secret cache"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

# Crypto deps mirror tracehub-edge's tracehub-secrets: pure-Rust RustCrypto
# (aes-gcm), the secrecy redaction wrapper, base64 for key/ciphertext encoding,
# and arc-swap for the lock-free cache. `rand` supplies the per-seal nonce.
[dependencies]
aes-gcm.workspace   = true
secrecy.workspace   = true
base64.workspace    = true
arc-swap.workspace  = true
rand.workspace      = true
thiserror.workspace = true
tokio.workspace     = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
