[package]
name        = "tasks"
version     = "0.1.0"
description = "Tasks CRUD service over Valkey + Kafka + OpenTelemetry (rust-basics)"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[[bin]]
name = "tasks"
path = "src/main.rs"

[dependencies]
httpx.workspace      = true
valkey.workspace     = true
kafka.workspace      = true
otelx.workspace      = true
tokio.workspace      = true
axum.workspace       = true
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
tracing.workspace    = true
uuid.workspace       = true

[dev-dependencies]
tokio.workspace                  = true
tower.workspace                  = true
serde_json.workspace             = true
testcontainers.workspace         = true
testcontainers-modules.workspace = true
