[package]
name        = "valkey"
version     = "0.1.0"
description = "Shared Valkey (Redis-compatible) cache for rust-basics services"
edition.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[dependencies]
redis.workspace      = true
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
envy.workspace       = true
anyhow.workspace     = true
tracing.workspace    = true

[dev-dependencies]
tokio.workspace = true
serde.workspace = true
testcontainers.workspace = true
